{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 90,
  "lineage": "6243ac80-3cc0-eb35-ec6c-d25928b56789",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ig-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-08b79b832eaede40c",
            "domain": "vpc",
            "id": "eipalloc-0433a53cda066353a",
            "instance": "i-07f486d9ce4a903e5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fa90eb588a9338a6",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-3-209-141-229.compute-1.amazonaws.com",
            "public_ip": "3.209.141.229",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.public-instance",
            "aws_internet_gateway.project-igw",
            "aws_network_interface.pub-server-nic",
            "aws_security_group.project-sg",
            "aws_subnet.subnet-pub",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0774eb30744a6b06b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-153-128-255.compute-1.amazonaws.com",
            "public_ip": "35.153.128.255",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.project-igw",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a8b4cd432b1c3063",
            "arn": "arn:aws:ec2:us-east-1:651521144954:instance/i-0ce240627abd000be",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce240627abd000be",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c67062739b7feb2c",
            "private_dns": "ip-10-0-2-227.ec2.internal",
            "private_ip": "10.0.2.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f1ed36c3e4e94a95",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00bd622de02497215",
            "tags": {
              "Name": "private-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-044af4fc6e96e712b"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet-priv",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a8b4cd432b1c3063",
            "arn": "arn:aws:ec2:us-east-1:651521144954:instance/i-07f486d9ce4a903e5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07f486d9ce4a903e5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0fa90eb588a9338a6"
              }
            ],
            "primary_network_interface_id": "eni-0fa90eb588a9338a6",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-068a361b6761ffb7c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c74f28160c6fe337",
            "tags": {
              "Name": "public-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a02aaa32db126187"
            ]
          },
          "dependencies": [
            "aws_network_interface.pub-server-nic",
            "aws_security_group.project-sg",
            "aws_subnet.subnet-pub",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651521144954:internet-gateway/igw-077a74444027e12ad",
            "id": "igw-077a74444027e12ad",
            "owner_id": "651521144954",
            "vpc_id": "vpc-004425fdcfdebf437"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "project-ngw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0774eb30744a6b06b",
            "id": "nat-0631052766a3819f5",
            "network_interface_id": "eni-04a69b18b3ae46f96",
            "private_ip": "10.0.1.193",
            "public_ip": "35.153.128.255",
            "subnet_id": "subnet-0c74f28160c6fe337",
            "tags": {
              "Name": "project-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.project-igw",
            "aws_subnet.subnet-pub",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "pub-server-nic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0fa90eb588a9338a6",
            "ipv6_address_count": 0,
            "mac_address": "12:21:69:ef:83:ff",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a02aaa32db126187"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c74f28160c6fe337"
          },
          "dependencies": [
            "aws_security_group.project-sg",
            "aws_subnet.subnet-pub",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project-ig-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651521144954:route-table/rtb-0f241331a853c3716",
            "id": "rtb-0f241331a853c3716",
            "owner_id": "651521144954",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-077a74444027e12ad",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-ig-routetable"
            },
            "vpc_id": "vpc-004425fdcfdebf437"
          },
          "dependencies": [
            "aws_internet_gateway.project-igw",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project-nat-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651521144954:route-table/rtb-0d05440ee26dace0f",
            "id": "rtb-0d05440ee26dace0f",
            "owner_id": "651521144954",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0631052766a3819f5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-nat-routetable"
            },
            "vpc_id": "vpc-004425fdcfdebf437"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.project-igw",
            "aws_nat_gateway.project-ngw",
            "aws_subnet.subnet-pub",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a0dbddf7a4c6618",
            "route_table_id": "rtb-0f241331a853c3716",
            "subnet_id": "subnet-0c74f28160c6fe337"
          },
          "dependencies": [
            "aws_internet_gateway.project-igw",
            "aws_route_table.project-ig-route-table",
            "aws_subnet.subnet-pub",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cd3f3f71cc0f484",
            "route_table_id": "rtb-0d05440ee26dace0f",
            "subnet_id": "subnet-00bd622de02497215"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.project-igw",
            "aws_nat_gateway.project-ngw",
            "aws_route_table.project-nat-route-table",
            "aws_subnet.subnet-priv",
            "aws_subnet.subnet-pub",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651521144954:security-group/sg-0a02aaa32db126187",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a02aaa32db126187",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "project sg",
            "name_prefix": "",
            "owner_id": "651521144954",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Project-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-004425fdcfdebf437"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-priv",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651521144954:subnet/subnet-00bd622de02497215",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00bd622de02497215",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "651521144954",
            "tags": {
              "Name": "project-priv-subnet"
            },
            "tags_all": {
              "Name": "project-priv-subnet"
            },
            "vpc_id": "vpc-004425fdcfdebf437"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-pub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651521144954:subnet/subnet-0c74f28160c6fe337",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c74f28160c6fe337",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "651521144954",
            "tags": {
              "Name": "project-pub-subnet"
            },
            "tags_all": {
              "Name": "project-pub-subnet"
            },
            "vpc_id": "vpc-004425fdcfdebf437"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651521144954:vpc/vpc-004425fdcfdebf437",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ff29103dc13d3d6e",
            "default_route_table_id": "rtb-09ae12ed4a79dad7b",
            "default_security_group_id": "sg-044af4fc6e96e712b",
            "dhcp_options_id": "dopt-0cc147ec2df502b80",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-004425fdcfdebf437",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09ae12ed4a79dad7b",
            "owner_id": "651521144954",
            "tags": {
              "Name": "project"
            },
            "tags_all": {
              "Name": "project"
            }
          }
        }
      ]
    }
  ]
}